Add variable names to forcing object

--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -164,8 +164,10 @@
       "End time: 2010-12-31T00:00:00Z\n",
       "Shapefile: None\n",
       "Additional information for model config:\n",
+      "  - precipitationNC: precipitation_2001to2010.nc\n",
       "  - temperatureNC: temperature_2001to2010.nc\n",
-      "  - precipitationNC: precipitation_2001to2010.nc\n"
+      "  - precipitationVariableName: precipitation\n",
+      "  - temperatureVariableName: temperature\n"
      ]
     }
    ],
@@ -179,7 +181,9 @@
     "    forcing_info = dict( \n",
     "        # model-specific options\n",
     "        precipitationNC = \"precipitation_2001to2010.nc\",\n",
-    "        temperatureNC = \"temperature_2001to2010.nc\"\n",
+    "        temperatureNC = \"temperature_2001to2010.nc\",\n",
+    "        temperatureVariableName = 'temperature',\n",
+    "        precipitationVariableName = 'precipitation'\n",
     "))\n",
     "print(forcing)"
    ]
@@ -245,8 +249,10 @@
       "  End time: 2010-12-31T00:00:00Z\n",
       "  Shapefile: None\n",
       "  Additional information for model config:\n",
+      "    - precipitationNC: precipitation_2001to2010.nc\n",
       "    - temperatureNC: temperature_2001to2010.nc\n",
-      "    - precipitationNC: precipitation_2001to2010.nc\n"
+      "    - precipitationVariableName: precipitation\n",
+      "    - temperatureVariableName: temperature\n"
      ]
     }
    ],
@@ -305,14 +311,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /home/peter/ewatercycle/ewatercycle/ewatercycle-pcrg-grpc4bmi-setters.sif singularity container on port 50639\n"
+      "Running /home/peter/ewatercycle/ewatercycle/ewatercycle-pcrg-grpc4bmi-setters.sif singularity container on port 49945\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210714_141432/pcrglobwb_ewatercycle.ini',\n",
-       " '/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210714_141432')"
+       "('/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210715_120048/pcrglobwb_ewatercycle.ini',\n",
+       " '/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210715_120048')"
       ]
      },
      "execution_count": 10,
@@ -820,9 +826,9 @@
        "  * latitude   (latitude) float64 46.25 48.75 51.25\n",
        "    time       object 2001-02-28 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 3</li><li><span class='xr-has-index'>longitude</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-54bb84d2-1fbf-461b-92ad-b60472ae25af' class='xr-array-in' type='checkbox' checked><label for='section-54bb84d2-1fbf-461b-92ad-b60472ae25af' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan 74.55 10.39 nan nan 188.1 nan nan</span></div><div class='xr-array-data'><pre>array([[         nan,          nan,          nan,          nan],\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 3</li><li><span class='xr-has-index'>longitude</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-0cff5181-1e73-4758-acb2-363ceb863670' class='xr-array-in' type='checkbox' checked><label for='section-0cff5181-1e73-4758-acb2-363ceb863670' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan 74.55 10.39 nan nan 188.1 nan nan</span></div><div class='xr-array-data'><pre>array([[         nan,          nan,          nan,          nan],\n",
        "       [         nan,  74.54685211,  10.38944435,          nan],\n",
-       "       [         nan, 188.07923889,          nan,          nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-3641422c-02e7-45e6-8cef-82fcee6279e7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3641422c-02e7-45e6-8cef-82fcee6279e7' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 6.25 8.75 11.25</div><input id='attrs-c325e259-27f3-4b45-a084-b1de369bc3c6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c325e259-27f3-4b45-a084-b1de369bc3c6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3710ddf8-96eb-4887-924e-f71eb0977ed7' class='xr-var-data-in' type='checkbox'><label for='data-3710ddf8-96eb-4887-924e-f71eb0977ed7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  6.25,  8.75, 11.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 48.75 51.25</div><input id='attrs-d3cd529f-8e2e-4401-bb4a-bc931531a7cc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d3cd529f-8e2e-4401-bb4a-bc931531a7cc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e02bbec9-5e5a-4ca8-a067-960ac64c6671' class='xr-var-data-in' type='checkbox'><label for='data-e02bbec9-5e5a-4ca8-a067-960ac64c6671' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 48.75, 51.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2001-02-28 00:00:00</div><input id='attrs-7089ed31-9f64-49aa-9f38-6f428d2046a8' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7089ed31-9f64-49aa-9f38-6f428d2046a8' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-52614924-717d-447c-840a-bf3169cee7b1' class='xr-var-data-in' type='checkbox'><label for='data-52614924-717d-447c-840a-bf3169cee7b1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2001, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-bd4bb73a-a9e4-424e-b3cf-81e6af17c97a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-bd4bb73a-a9e4-424e-b3cf-81e6af17c97a' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "       [         nan, 188.07923889,          nan,          nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-64531475-ef6b-4230-bfc7-5be8a42427b7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-64531475-ef6b-4230-bfc7-5be8a42427b7' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 6.25 8.75 11.25</div><input id='attrs-37cb5eaf-f020-426c-bc13-49b7e924523a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-37cb5eaf-f020-426c-bc13-49b7e924523a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9ee07939-f501-460b-a883-6ff2e2e85b3f' class='xr-var-data-in' type='checkbox'><label for='data-9ee07939-f501-460b-a883-6ff2e2e85b3f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  6.25,  8.75, 11.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 48.75 51.25</div><input id='attrs-67cddafb-6fd0-45c7-9461-dcc6673b0e48' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-67cddafb-6fd0-45c7-9461-dcc6673b0e48' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3676300f-b097-49cb-9c52-f3c97eb78324' class='xr-var-data-in' type='checkbox'><label for='data-3676300f-b097-49cb-9c52-f3c97eb78324' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 48.75, 51.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2001-02-28 00:00:00</div><input id='attrs-080d83cf-d396-4845-ac6a-7f7692210469' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-080d83cf-d396-4845-ac6a-7f7692210469' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ae335b7f-a751-4c48-86ed-d8cb7f44a5f4' class='xr-var-data-in' type='checkbox'><label for='data-ae335b7f-a751-4c48-86ed-d8cb7f44a5f4' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2001, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-02536a7a-67c4-4e28-83f5-9fcb8a2c5f25' class='xr-section-summary-in' type='checkbox'  checked><label for='section-02536a7a-67c4-4e28-83f5-9fcb8a2c5f25' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 3, longitude: 4)>\n",
@@ -864,7 +870,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f636aa5c4f0>"
+       "<matplotlib.collections.PathCollection at 0x7fdc56405130>"
       ]
      },
      "execution_count": 16,
