revise or add text in markdown cells

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -46,9 +46,10 @@
    "source": [
     "## Load forcing data\n",
     "\n",
-    "For this example noetbook, lisflood_ERA-Interim_*_1990_1990.nc data are copied \n",
+    "For this example notebook, `lisflood_ERA-Interim_*_1990_1990.nc` data are copied \n",
     "from `/projects/0/wtrcycle/comparison/forcing/lisflood` to `/scratch/shared/ewatercycle/lisflood_example/lisflood_forcing_data`.\n",
-    "Also the lisvap output files 'e0', 'es0' and 'et0' are generated and stored in the same directory."
+    "Also the lisvap output files 'e0', 'es0' and 'et0' are generated and stored in the same directory.\n",
+    "These data are made by running ESMValTool recipe and lisvap. We can now use those files to run the Lisflood model."
    ]
   },
   {
@@ -371,7 +372,7 @@
    "id": "80d7c751-74a4-4057-ac04-15bc216e131f",
    "metadata": {},
    "source": [
-    "Store simulated values at one target location until model end time."
+    "Store simulated values at one target location until model end time. In this example, we use the coordinates of Merrimack observation station as the target coordinates. "
    ]
   },
   {
@@ -464,7 +465,9 @@
    "id": "72deaa2b-5b47-49b6-9d55-03ffd95cfe7b",
    "metadata": {},
    "source": [
-    "## Inspect the results"
+    "## Inspect the results\n",
+    "\n",
+    "The discharge time series at Merrimack observation station:"
    ]
   },
   {
@@ -504,9 +507,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0382f4d-e179-4ee7-bd24-f258919e6c53",
+   "metadata": {},
+   "source": [
+    "The lisflood output has a global extent. In this example, we plot the discharge values in Merrimack catchment and at the last time step."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c7522b29",
+   "id": "a74a7ca1-35c2-49cd-aeaf-874510f00c0c",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
