Suggestions by Stefan

--- a/docs/examples/Irrigation.ipynb
+++ b/docs/examples/Irrigation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3cf04b0",
+   "id": "bf4232c5",
    "metadata": {},
    "source": [
     "![ewatercycle logo](https://raw.githubusercontent.com/eWaterCycle/ewatercycle/main/docs/examples/logo.png)\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41de6c1e",
+   "id": "8a0a0658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e15d2d8d",
+   "id": "8d6557a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0353e965",
+   "id": "64036371",
    "metadata": {},
    "source": [
     "We will run 2 versions of the same model:\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918a3fd1",
+   "id": "257b54db",
    "metadata": {},
    "source": [
     "We will set up the models with identical parameters and settings. We will use a standard dataset with global parameters on 5 and 30 minutes resolution. The example parameter sets also include forcing data."
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "939d3e50",
+   "id": "28040082",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
       "name=custom_parameter_set\n",
       "directory=/mnt/data/examples/technical_paper/pcr-globwb/input\n",
       "config=/mnt/home/user37/ewatercycle/docs/examples/pcrglobwb_merrimack.ini\n",
-      "doi=N/A\n",
+      "doi=10.5281/zenodo.1045339\n",
       "target_model=pcrglobwb\n",
       "supported_model_versions={'setters'}\n"
      ]
@@ -85,6 +85,7 @@
     "    directory=\"/mnt/data/examples/technical_paper/pcr-globwb/input\",\n",
     "    config=\"./pcrglobwb_merrimack.ini\",\n",
     "    target_model=\"pcrglobwb\",\n",
+    "    doi=\"10.5281/zenodo.1045339\",\n",
     "    supported_model_versions={'setters'}\n",
     ")\n",
     "\n",
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c83a48d",
+   "id": "89a2dc93",
    "metadata": {},
    "source": [
     "We'll track a grid cell nearby a GRDC station with the following coordinates:"
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5c5cd93",
+   "id": "0c052bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afdcce68",
+   "id": "cb3d7c40",
    "metadata": {},
    "source": [
     "## Reference experiment\n",
@@ -123,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "80bebe33",
+   "id": "1f78aa3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e9585893",
+   "id": "81585f81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923050a3",
+   "id": "e69fe5a5",
    "metadata": {},
    "source": [
     "Create an empty dataframe to store the modelled discharge"
@@ -157,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "54408142",
+   "id": "907c4dfb",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c985fa9b",
+   "id": "943ece88",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
     "    reference.update() \n",
     "    \n",
     "    # Track discharge at station location\n",
-    "    discharge_at_station = reference.get_value_at_coords('discharge', lat=[42.6459], lon=[-71.2984])\n",
+    "    discharge_at_station = reference.get_value_at_coords('discharge', lat=[grdc_latitude], lon=[grdc_longitude])\n",
     "    time = reference.time_as_isostr\n",
     "    timeseries['reference'][time] = discharge_at_station[0]\n",
     "    \n",
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8377915b",
+   "id": "9ce9b1e1",
    "metadata": {},
    "source": [
     "### Intermediate insights\n",
@@ -282,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ecca380d",
+   "id": "5010a3d8",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae12081c",
+   "id": "98842465",
    "metadata": {},
    "source": [
     "We can also make a map of discharge at the last model step"
@@ -375,13 +376,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ac431f36",
+   "id": "a8f36266",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.feature_artist.FeatureArtist at 0x7f3659d22b50>"
+       "<cartopy.mpl.feature_artist.FeatureArtist at 0x7fadd0837cd0>"
       ]
      },
      "execution_count": 10,
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e110feea",
+   "id": "1a9a3b49",
    "metadata": {},
    "source": [
     "You can see that the grdc location indeed represents a cell that we would identify as a river."
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed2b5b4",
+   "id": "1ee4b846",
    "metadata": {},
    "source": [
     "We can also have a quick look at the discharge timeseries we have tracked, to see if it makes any sense."
@@ -437,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a86e4e6d",
+   "id": "2414fb2f",
    "metadata": {},
    "outputs": [
     {
@@ -469,18 +470,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa798515",
+   "id": "22487f7d",
    "metadata": {},
    "source": [
     "## Running the irrigation experiment\n",
     "\n",
-    "Before we initialize the experiment, let's use the reference model to illustrate the concept of what we will do"
+    "Before we initialize the experiment, let's use the reference model to illustrate the concept of what we will do.\n",
+    "\n",
+    "We will fetch the soil moisture field and overwrite a part of it so that the soil will be fully saturated."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "482d187c",
+   "id": "05ea5223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soil_moisture = reference.get_value_as_xarray('upper_soil_saturation_degree')\n",
+    "\n",
+    "# Copy the field and manually overwrite a random part of the domain\n",
+    "irrigated_soil_moisture = soil_moisture.copy()\n",
+    "irrigated_soil_moisture[31:41, 18:28] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7281cd17",
+   "metadata": {},
+   "source": [
+    "Let's visualize the difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e36689d1",
    "metadata": {},
    "outputs": [
     {
@@ -497,13 +522,6 @@
     }
    ],
    "source": [
-    "soil_moisture = reference.get_value_as_xarray('upper_soil_saturation_degree')\n",
-    "\n",
-    "# Copy the field and manually overwrite a random part of the domain\n",
-    "irrigated_soil_moisture = soil_moisture.copy()\n",
-    "irrigated_soil_moisture[31:41, 18:28] = 1\n",
-    "\n",
-    "# Visualize the difference\n",
     "fig = plt.figure(figsize=(10, 5), dpi=120)\n",
     "left_axes = fig.add_subplot(121, projection=crs.PlateCarree())\n",
     "right_axes = fig.add_subplot(122, projection=crs.PlateCarree())\n",
@@ -523,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43008c27",
+   "id": "c5814a7e",
    "metadata": {},
    "source": [
     "From here on we will do exactly the same as before, except that we'll add three extra lines to overwrite soil moisture at every time step."
@@ -531,8 +549,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fbe44b10",
+   "execution_count": 14,
+   "id": "8af4b144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,8 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "368f6d2e",
+   "execution_count": 15,
+   "id": "de154f1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,8 +570,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9d1b0e90",
+   "execution_count": 16,
+   "id": "1b675b16",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +593,7 @@
     "    experiment.set_value('upper_soil_saturation_degree', soil_moisture.values.flatten())   \n",
     "    \n",
     "    # Track discharge at station location\n",
-    "    discharge_at_station = experiment.get_value_at_coords('discharge', lat=[42.6459], lon=[-71.2984])\n",
+    "    discharge_at_station = experiment.get_value_at_coords('discharge', lat=[grdc_latitude], lon=[grdc_longitude])\n",
     "    time = experiment.time_as_isostr\n",
     "    timeseries['experiment'][time] = discharge_at_station[0]\n",
     "    \n",
@@ -585,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76b4cb2",
+   "id": "beda70ac",
    "metadata": {},
    "source": [
     "## Final analysis"
@@ -593,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "703acb5b",
+   "execution_count": 17,
+   "id": "3ff21cbc",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +621,7 @@
        "Text(0.5, 1.0, 'Increased discharge due to irrigation')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -628,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "281ec38a",
+   "id": "d7d57386",
    "metadata": {},
    "source": [
     "## Clean up\n",
@@ -638,8 +656,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b8652177",
+   "execution_count": 18,
+   "id": "793f9594",
    "metadata": {},
    "outputs": [],
    "source": [
