Rename to 'User guide' and move level up in toctree

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -5,7 +5,7 @@
    "id": "135115cc",
    "metadata": {},
    "source": [
-    "# eWaterCycle platform tutorial\n",
+    "# User guide\n",
     "\n",
     "This is a small tutorial of the eWaterCycle platform, showing the concepts in the eWaterCycle platform, and how these are generally used. The experiment shown in this notebook is a straigtforward model run leading to a hydrograph.\n",
     "\n",
@@ -575,7 +575,7 @@
    "id": "dff204cb",
    "metadata": {},
    "source": [
-    "# TODO Merge these cells below\n",
+    "## TODO Merge these cells below\n",
     "In the loop, only use get_value_at_coords to keep track of a single outlet point.\n",
     "At the end, show get_value_as_xarray to show you can also get the whole field"
    ]
