update parametersets 'chapter'

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -38,7 +38,7 @@
    "id": "001d69ad",
    "metadata": {},
    "source": [
-    "### Configuration\n",
+    "**Configuration**\n",
     "\n",
     "To be able to find all needed data and models eWaterCycle comes with a configuration object. This configuration contains system settings for eWaterCycle (which container technology to use, where is the data located, etc). In general these should not need to be changed by the user for a specific experiment, and ideally a user would never need to touch this configuration on a properly managed system. However, it is good to know that it is there. \n",
     "\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "61e99042",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "                                               'target_model': 'lisflood'},\n",
        "                           'pcrglobwb_rhinemeuse_30min': {'config': 'pcrglobwb_rhinemeuse_30min/setup_natural_test.ini',\n",
        "                                                          'directory': 'pcrglobwb_rhinemeuse_30min',\n",
-       "                                                          'doi': 'N/A',\n",
+       "                                                          'doi': 'https://doi.org/10.5281/zenodo.1045339',\n",
        "                                                          'supported_model_versions': {'setters'},\n",
        "                                                          'target_model': 'pcrglobwb'},\n",
        "                           'wflow_rhine_sbm_nc': {'config': 'wflow_rhine_sbm_nc/wflow_sbm_NC.ini',\n",
@@ -78,7 +78,7 @@
        "        'singularity_dir': PosixPath('/home/peter/ewatercycle/ewatercycle')})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,14 +105,12 @@
    "source": [
     "## Parameter sets\n",
     "\n",
-    "eWaterCycle allows model parameters to be set once a model instance has been created. However, as some models require a large number of files and other settings, it is also possible to pass a `ParameterSet` apon creation of a model instance. Which ParameterSets are available for a certain model can be requested from the model class.\n",
-    "\n",
-    "In general the id determines the location in the collection of parameter sets available."
+    "Parameter sets are an essential part of many hydrological models, and for the eWaterCycle package as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "35153e8b",
    "metadata": {},
    "outputs": [],
@@ -121,8 +119,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce991717-557f-4399-bae0-f61aab28f093",
+   "metadata": {},
+   "source": [
+    "The default [system setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html#download-example-parameter-sets) includes a number of example parameter sets that can be used directly. System administrators can also add available parameter sets that are globally availble to all users. To see the available parameter sets:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "id": "20f2f6c8-9627-463c-aed3-769601b23932",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('lisflood_fraser', 'pcrglobwb_rhinemeuse_30min', 'wflow_rhine_sbm_nc')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ewatercycle.parameter_sets.available_parameter_sets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c80e312-8cb8-4092-9e2a-372f7c37d765",
+   "metadata": {},
+   "source": [
+    "Since most parameter sets are model specific, you can filter the results as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "509f8529",
    "metadata": {},
    "outputs": [
@@ -132,7 +167,7 @@
        "('wflow_rhine_sbm_nc',)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +177,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d61a59e-c18c-4ce8-8522-e841213be36e",
+   "metadata": {},
+   "source": [
+    "Once you have found a suitable parameter set, you can load it and see some more details:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8cf5c944",
    "metadata": {},
    "outputs": [
@@ -153,120 +196,84 @@
      "text": [
       "Parameter set\n",
       "-------------\n",
-      "name='wflow_rhine_sbm_nc'\n",
-      "directory=PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc')\n",
-      "config=PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc/wflow_sbm_NC.ini')\n",
-      "doi='N/A'\n",
-      "target_model='wflow'\n",
-      "supported_model_versions={'2020.1.1'}\n"
+      "name=pcrglobwb_rhinemeuse_30min\n",
+      "directory=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\n",
+      "config=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\n",
+      "doi=https://doi.org/10.5281/zenodo.1045339\n",
+      "target_model=pcrglobwb\n",
+      "supported_model_versions={'setters'}\n"
      ]
     }
    ],
    "source": [
-    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow_rhine_sbm_nc')\n",
-    "print(parameter_set)"
+    "rhinemeuse = ewatercycle.parameter_sets.get_parameter_set('pcrglobwb_rhinemeuse_30min')\n",
+    "print(rhinemeuse)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "c413e5e0",
+   "cell_type": "markdown",
+   "id": "ade56ebf-48e3-490e-b650-90bb193b019d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'wflow'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "parameter_set.target_model"
+    "or you can access individual attributes of the parameter sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "fd7a7614",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'N/A'"
+       "'https://doi.org/10.5281/zenodo.1045339'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parameter_set.doi"
+    "rhinemeuse.doi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d142134-d398-41a2-bffb-5fe98a2319e4",
+   "metadata": {},
+   "source": [
+    "Should you wish to configure your own parameter set, this is also possible:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "dcf76b00",
+   "execution_count": 14,
+   "id": "95038c96-4c92-458d-b1f0-11dc7a4efa10",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'wflow_rhine_sbm_nc'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parameter_set.name"
+    "custom_parameter_set = ewatercycle.parameter_sets.ParameterSet(\n",
+    "    name=\"custom_parameter_set\",\n",
+    "    directory=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\",\n",
+    "    config=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\",\n",
+    "    target_model=\"pcrglobwb\",\n",
+    "    doi=\"https://doi.org/10.5281/zenodo.1045339\",\n",
+    "    supported_model_versions={'setters'}\n",
+    ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "bef7aba9",
+   "cell_type": "markdown",
+   "id": "02900c20-a70b-4767-aafa-04a7ba3399fd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'2020.1.1'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "parameter_set.supported_model_versions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "f13092af",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(parameter_set.directory)"
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "As you can see, an eWaterCycle parameter set is defined fully by a directory and a configuration file. The configuration file typically informs the model about the structure of the parameter set (e.g. \"what is the filename of the land use data\"). It is possible to change these settings later, when [setting up the model](#Models).\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -276,7 +283,7 @@
    "source": [
     "## Forcing data\n",
     "\n",
-    "eWaterCycle can generate forcing for a model using the `forcing` module. This does all the required steps to go from the available datasets (ERA-5, ERA-Interim, etc) to whatever format the model requires for forcing. In general the output should match a forcing prepared \"manually\" for this model.\n",
+    "eWaterCycle can generate forcing for a model using the `forcing` module. This does all the required steps to go from the available datasets (ERA5, ERA-Interim, etc) to whatever format the model requires for forcing. In general the output should match a forcing prepared \"manually\" for this model.\n",
     "\n",
     "As input for the forcing generation the shape of the required forcing (usually a catchment) is needed. eWaterCycle will derive additiona information such as a bounding box if this is required by the model (e.g. in case of a gridded model), and additional options may be available or even required for some models.\n",
     "\n",
